# mysql-proxy

./: .bzrignore  CMakeLists.txt  Doxyfile  INSTALL  Makefile.am  NEWS  README  README.rtf  autogen.sh  config.h.cmake  configure.ac  configure.in  mysql-chassis.pc.cmake  mysql-chassis.pc.in  mysql-proxy.pc.in  winbuild.bat
doc/: Makefile.am  architecture-overview.dot  architecture.txt  book.txt  chassis.txt  plugins.txt  protocol.txt  scripting.txt  tests.txt  testsuite.txt
examples/: CMakeLists.txt  Makefile.am  tutorial-basic.lua  tutorial-constants.lua  tutorial-inject.lua  tutorial-keepalive.lua  tutorial-monitor.lua  tutorial-packets.lua  tutorial-prep-stmts.lua  tutorial-query-time.lua  tutorial-resultset.lua  tutorial-rewrite.lua  tutorial-routing.lua  tutorial-scramble.lua  tutorial-states.lua  tutorial-tokenize.lua  tutorial-union.lua  tutorial-warnings.lua
lib/: CMakeLists.txt  Makefile.am  active-queries.lua  active-transactions.lua  admin-sql.lua  admin.lua  analyze-query.lua  auditing.lua  chassis.c  commit-obfuscator.lua  glib2.c  histogram.lua  lfs.c  load-multi.lua  lpeg.c  mysql-password.c  mysql-proto.c  posix.c  ro-balance.lua  ro-pooling.lua  rw-splitting.lua  sql-tokenizer-gen.c  sql-tokenizer-keywords.h  sql-tokenizer-lua.c  sql-tokenizer-tokens.c  sql-tokenizer.h  sql-tokenizer.l  xtab.lua
lib/proxy/: CMakeLists.txt  Makefile.am  auto-config.lua  balance.lua  commands.lua  parser.lua  test.lua  tokenizer.lua
plugins/: CMakeLists.txt  Makefile.am
plugins/admin/: CMakeLists.txt  Makefile.am  admin-plugin.c
plugins/cli/: CMakeLists.txt  Makefile.am  cli-plugin.c
plugins/debug/: CMakeLists.txt  Makefile.am  debug-plugin.c
plugins/proxy/: CMakeLists.txt  Makefile.am  proxy-plugin.c  proxy-plugin.h
plugins/replicant/: CMakeLists.txt  Makefile.am  replicant-plugin.c
src/: CMakeLists.txt  Makefile.am  backend.c  chassis-event-thread.c  chassis-event-thread.h  chassis-exports.h  chassis-filemode.c  chassis-filemode.h  chassis-frontend.c  chassis-frontend.h  chassis-gtimeval.c  chassis-gtimeval.h  chassis-keyfile.c  chassis-keyfile.h  chassis-limits.c  chassis-limits.h  chassis-log.c  chassis-log.h  chassis-mainloop.c  chassis-mainloop.h  chassis-options.c  chassis-options.h  chassis-path.c  chassis-path.h  chassis-perm.c  chassis-perm.h  chassis-plugin.c  chassis-plugin.h  chassis-shutdown-hooks.c  chassis-shutdown-hooks.h  chassis-stats.c  chassis-stats.h  chassis-timings.c  chassis-timings.h  chassis-unix-daemon.c  chassis-unix-daemon.h  chassis-win32-service.c  chassis-win32-service.h  chassis.c  disable-dtrace.h  (+71 more)
tags/mysql-proxy-0.5.1/src/: Makefile.am  network-mysqld-proto.c  network-mysqld-proto.h  network-mysqld-table.c  network-mysqld.c
tags/mysql-proxy-0.6.0/src/: Makefile.am  glib-ext.c  mysql-proxy.c  network-conn-pool.c  network-mysqld.c  network-socket.c  sys-pedantic.h
tags/mysql-proxy-0.6.1/examples/: Makefile.am  tutorial-keepalive.lua  tutorial-warnings.lua
tags/mysql-proxy-0.6.1/src/: CMakeLists.txt  glib-ext.c  glib-ext.h  mysql-proxy.c  network-conn-pool.h  network-mysqld-proto.c  network-mysqld-server.c  sys-pedantic.h
tests/suite/: CMakeLists.txt  Makefile.am  lua-tests-wrapper.sh.in  run-tests.lua
tests/suite/base/: Makefile.am  tests_to_skip.lua
tests/suite/bugs/: Makefile.am
tests/unit/: CMakeLists.txt  Makefile.am  check_chassis_filemode.c  check_chassis_filepermissions.c  check_chassis_log.c  check_chassis_path.c  check_loadscript.c  check_mysqld_proto.c  check_plugin.c  check_sql_tokenizer.c  t_chassis_frontend.c  t_chassis_keyfile.c  t_chassis_shutdown_hooks.c  t_chassis_timings.c  t_network_address.c  t_network_asn1.c  t_network_backend.c  t_network_injection.c  t_network_mysqld_masterinfo.c  t_network_mysqld_packet.c  t_network_queue.c  t_network_socket.c  t_network_spnego.c
tests/unit/lua/: CMakeLists.txt  Makefile.am  active-queries.lua  chassis.lua  lua-tests-wrapper.sh.in  lua_runner.c  mysql-proto.lua  proxy-auto-config.lua  proxy-commands.lua  proxy-parser.lua  proxy-test.lua  proxy-tokenizer.lua
trunk/: Doxyfile  INSTALL  NEWS  README  README.TESTS  autogen.sh  config.h.cmake  configure.in  mysql-proxy.spec.in  winbuild.bat
trunk/cmake/: ChassisPlugin.cmake  Tar.cmake
trunk/examples/: tutorial-basic.lua  tutorial-constants.lua  tutorial-inject.lua  tutorial-keepalive.lua  tutorial-load-multi.lua  tutorial-monitor.lua  tutorial-packets.lua  tutorial-query-time.lua  tutorial-resultset.lua  tutorial-rewrite.lua  tutorial-states.lua  tutorial-tokenize.lua  tutorial-warnings.lua
trunk/lib/: active-queries.lua  active-transactions.lua  analyze-query.lua  auditing.lua  glib2.c  histogram.lua  lfs.c  load-multi.lua  ro-balance.lua  rw-splitting.lua  xtab.lua
trunk/lib/proxy/: auto-config.lua  balance.lua  commands.lua  parser.lua  test.lua  tokenizer.lua
trunk/plugins/admin/: admin-plugin.c  plugin.c
trunk/plugins/cli/: cli-plugin.c  plugin.c
trunk/plugins/debug/: debug-plugin.c
trunk/plugins/proxy/: plugin.c  proxy-plugin.c  proxy-plugin.h
trunk/plugins/replicant/: plugin.c  replicant-plugin.c
trunk/src/: Makefile.am  backend.c  backend.h  cauldron-plugin.c  cauldron-plugin.h  chassis-keyfile.c  chassis-keyfile.h  chassis-log.c  chassis-log.h  chassis-mainloop.c  chassis-mainloop.h  chassis-plugin.c  chassis-plugin.h  chassis.c  glib-ext.c  glib-ext.h  lua-env.c  lua-env.h  lua-load-factory.c  lua-load-factory.h  lua-scope.c  lua-scope.h  mysql-binlog-dump.c  mysql-proxy.c  mysql-proxy.mc  network-backend-lua.c  network-conn-pool-lua.c  network-conn-pool-lua.h  network-conn-pool.c  network-conn-pool.h  network-exports.h  network-mysqld-binlog.c  network-mysqld-binlog.h  network-mysqld-lua.c  network-mysqld-lua.h  network-mysqld-packet.c  network-mysqld-packet.h  network-mysqld-proto.c  network-mysqld-proto.h  network-mysqld-proxy.c  (+15 more)
trunk/tests/: run-tests.lua  run-tests.sh
trunk/tests/r/: raw-packets.result  select-affected_rows.result
trunk/tests/suite/: glib2.c  lfs.c  run-tests.lua
trunk/tests/t/: raw-packets.lua  select-affected_rows.lua  select-affected_rows.test
(+247 files in other folders)
