include(UsePkgConfig)
include(CheckIncludeFiles)
include(CheckFunctionExists)
INCLUDE(CheckTypeSize)

include_directories (${AGENT_SOURCE_DIR}/)

pkgconfig(glib-2.0 GLIB_INC_DIR GLIB_LIB_DIR GLIB_LDFLAGS GLIB_CFLAGS)
MESSAGE(STATUS "GLIB_INC_DIR ${GLIB_INC_DIR}")
MESSAGE(STATUS "GLIB_LIB_DIR ${GLIB_LIB_DIR}")
MESSAGE(STATUS "GLIB_LDFLAGS ${GLIB_LDFLAGS}")
MESSAGE(STATUS "GLIB_CFLAGS ${GLIB_CFLAGS}")

pkgconfig(libxml-2.0 XML_INC_DIR XML_LIB_DIR XML_LDFLAGS XML_CFLAGS)
MESSAGE(STATUS "XML_INC_DIR ${XML_INC_DIR}")
MESSAGE(STATUS "XML_LIB_DIR ${XML_LIB_DIR}")
MESSAGE(STATUS "XML_LDFLAGS ${XML_LDFLAGS}")
MESSAGE(STATUS "XML_CFLAGS ${XML_CFLAGS}")

link_directories(${GLIB_LIB_DIR})
include_directories(${GLIB_LIB_DIR}/glib-2.0/include ${GLIB_INC_DIR}/glib-2.0/)
include_directories(/usr/include/mysql/ /usr/local/mysql/include/)
INCLUDE_DIRECTORIES(${XML_INC_DIR}/libxml2 ${XML_INC_DIR})
# LINK_DIRECTORIES(/usr/lib64/mysql/)
LINK_DIRECTORIES(/usr/local/mysql/lib)

CHECK_INCLUDE_FILES(inttypes.h HAVE_INTTYPES_H)
IF (HAVE_INTTYPES_H) 
  ADD_DEFINITIONS(-DHAVE_INTTYPES_H) 
ENDIF(HAVE_INTTYPES_H)

CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H)
IF (HAVE_UNISTD_H) 
  ADD_DEFINITIONS(-DHAVE_UNISTD_H) 
ENDIF(HAVE_UNISTD_H)

CHECK_INCLUDE_FILES(sys/time.h HAVE_SYS_TIME_H)
IF (HAVE_SYS_TIME_H) 
  ADD_DEFINITIONS(-DHAVE_SYS_TIME_H) 
ENDIF(HAVE_SYS_TIME_H)

CHECK_INCLUDE_FILES(sys/filio.h HAVE_SYS_FILIO_H)
IF (HAVE_SYS_FILIO_H) 
  ADD_DEFINITIONS(-DHAVE_SYS_FILIO_H) 
ENDIF(HAVE_SYS_FILIO_H)

CHECK_INCLUDE_FILES(sys/socket.h HAVE_SYS_SOCKET_H)
IF (HAVE_SYS_SOCKET_H) 
  ADD_DEFINITIONS(-DHAVE_SYS_SOCKET_H) 
ENDIF(HAVE_SYS_SOCKET_H)

CHECK_INCLUDE_FILES(sys/resource.h HAVE_SYS_RESOURCE_H)
IF (HAVE_SYS_RESOURCE_H) 
  ADD_DEFINITIONS(-DHAVE_SYS_RESOURCE_H) 
ENDIF(HAVE_SYS_RESOURCE_H)

CHECK_INCLUDE_FILES(sys/ioctl.h HAVE_SYS_IOCTL_H)
IF (HAVE_SYS_IOCTL_H) 
  ADD_DEFINITIONS(-DHAVE_SYS_IOCTL_H) 
ENDIF(HAVE_SYS_IOCTL_H)

CHECK_INCLUDE_FILES(stdlib.h HAVE_STDLIB_H)
IF (HAVE_STDLIB_H) 
  ADD_DEFINITIONS(-DHAVE_STDLIB_H) 
ENDIF(HAVE_STDLIB_H)

CHECK_INCLUDE_FILES(sys/sockio.h HAVE_SYS_SOCKIO_H)
IF (HAVE_SYS_SOCKIO_H) 
  ADD_DEFINITIONS(-DHAVE_SYS_SOCKIO_H) 
ENDIF(HAVE_SYS_SOCKIO_H)

CHECK_INCLUDE_FILES(net/if.h HAVE_NET_IF_H)
IF (HAVE_NET_IF_H) 
  ADD_DEFINITIONS(-DHAVE_NET_IF_H) 
ENDIF(HAVE_NET_IF_H)

CHECK_INCLUDE_FILES(net/if_dl.h HAVE_NET_IF_DL_H)
IF (HAVE_NET_IF_DL_H) 
  ADD_DEFINITIONS(-DHAVE_NET_IF_DL_H) 
ENDIF(HAVE_NET_IF_DL_H)

CHECK_INCLUDE_FILES(netinet/in.h HAVE_NETINET_IN_H)
IF (HAVE_NETINET_IN_H) 
  ADD_DEFINITIONS(-DHAVE_NETINET_IN_H) 
ENDIF(HAVE_NETINET_IN_H)

CHECK_FUNCTION_EXISTS(signal HAVE_SIGNAL)
IF (HAVE_SIGNAL) 
  ADD_DEFINITIONS(-DHAVE_SIGNAL) 
ENDIF(HAVE_SIGNAL)

CHECK_FUNCTION_EXISTS(srandom HAVE_SRANDOM)
IF (HAVE_SRANDOM) 
  ADD_DEFINITIONS(-DHAVE_SRANDOM) 
ENDIF(HAVE_SRANDOM)

SET(LUALIBS )
CHECK_INCLUDE_FILES(lua.h HAVE_LUA_H)
IF (HAVE_LUA_H) 
  ADD_DEFINITIONS(-DHAVE_LUA_H) 
  SET(LUALIBS lua m)
ENDIF(HAVE_LUA_H)

SET(EVENTLIBS )
CHECK_INCLUDE_FILES(event.h HAVE_EVENT_H)
IF (HAVE_EVENT_H) 
  ADD_DEFINITIONS(-DHAVE_EVENT_H) 
  SET(EVENTLIBS event)
ENDIF(HAVE_EVENT_H)

IF(NOT WIN32)
  IF(HAVE_EVENT_H)
    SET(proxy_sources 
	network-mysqld.c
	network-mysqld-proxy.c
	network-mysqld-server.c
	network-mysqld-proto.c
	network-mysqld-table.c
	)
  
    ADD_EXECUTABLE(mysql-proxy mysql-proxy.c ${proxy_sources})
    TARGET_LINK_LIBRARIES(mysql-proxy glib-2.0 ${LUALIBS} ${EVENTLIBS})
  ENDIF(HAVE_EVENT_H)
ENDIF(NOT WIN32)

# ADD_EXECUTABLE(proxy-test proxy-test.c)
# TARGET_LINK_LIBRARIES(proxy-test mysqlclient m z glib-2.0)

# ADD_EXECUTABLE(trx-id trx-id.c)
# TARGET_LINK_LIBRARIES(trx-id mysqlclient m z glib-2.0 gthread-2.0)

